Fixed nowrap

--- a/source/main-css.css
+++ b/source/main-css.css
@@ -47,7 +47,6 @@ a:active {
     color: hotpink;
 }
 .map-title  {
-    white-space: nowrap;
     color: #99AAB5;
     font-family: "Comic Sans MS";
     text-align: left;
